--- a/public/index.html
+++ b/public/index.html
@@ -13,5 +13,6 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script src="https://kit.fontawesome.com/f904f1ec9e.js" crossorigin="anonymous"></script>
   </body>
 </html>
